Creación clase PersonaWrapper y tests básicos de inicialización con el constructor

--- a/Gama.Atenciones.Wpf/Gama.Atenciones.Wpf.csproj
+++ b/Gama.Atenciones.Wpf/Gama.Atenciones.Wpf.csproj
@@ -77,6 +77,7 @@
     </ApplicationDefinition>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Wrapper\PersonaWrapper.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -120,6 +121,12 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ModuloDeAtenciones\Gama.Atenciones.Biz.csproj">
+      <Project>{675c4ff2-6275-44e1-b257-aa00b07c938a}</Project>
+      <Name>Gama.Atenciones.Biz</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
