--- a/Gama.Atenciones.Wpf/Gama.Atenciones.Wpf.csproj
+++ b/Gama.Atenciones.Wpf/Gama.Atenciones.Wpf.csproj
@@ -77,6 +77,7 @@
     </ApplicationDefinition>
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Compile Include="Wrapper\ModelWrapper.cs" />
     <Compile Include="Wrapper\PersonaWrapper.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
