Añadido campo complejo de Direccion a Persona; nueva clase Direccion

--- a/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
+++ b/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
@@ -90,6 +90,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Cita.cs" />
+    <Compile Include="Model\Direccion.cs" />
     <Compile Include="Model\Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
