--- a/Gama.Atenciones.WpfTests/Gama.Atenciones.WpfTests.csproj
+++ b/Gama.Atenciones.WpfTests/Gama.Atenciones.WpfTests.csproj
@@ -46,7 +46,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -54,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wrapper\BasicTests.cs" />
     <Compile Include="Wrapper\ChangeNotificationSimpleProperty.cs" />
+    <Compile Include="Wrapper\ChangeNotificationComplexProperty.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Común\Gama.Común.csproj">
