--- a/Gama.Atenciones.WpfTests/Gama.Atenciones.WpfTests.csproj
+++ b/Gama.Atenciones.WpfTests/Gama.Atenciones.WpfTests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Wrapper\BasicTests.cs" />
+    <Compile Include="Wrapper\ChangeNotificationCollectionProperty.cs" />
     <Compile Include="Wrapper\ChangeNotificationSimpleProperty.cs" />
     <Compile Include="Wrapper\ChangeNotificationComplexProperty.cs" />
   </ItemGroup>
