--- a/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
+++ b/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
@@ -5,10 +5,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{675C4FF2-6275-44E1-B257-AA00B07C938A}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ModuloDeAtenciones</RootNamespace>
-    <AssemblyName>ModuloDeAtenciones</AssemblyName>
+    <RootNamespace>Gama.Atenciones.Biz</RootNamespace>
+    <AssemblyName>Gama.Atenciones.Biz</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -33,6 +33,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="GalaSoft.MvvmLight, Version=5.2.0.37222, Culture=neutral, PublicKeyToken=e7570ab207bcb616, processorArchitecture=MSIL">
@@ -71,22 +74,8 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <ApplicationDefinition Include="App.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Compile Include="App.xaml.cs">
-      <DependentUpon>App.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
-    <Compile Include="MainWindow.xaml.cs">
-      <DependentUpon>MainWindow.xaml</DependentUpon>
-      <SubType>Code</SubType>
-    </Compile>
+    <Compile Include="Util\EnumBindingSourceExtension.cs" />
+    <Compile Include="Util\EnumDescriptionTypeConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Cita.cs" />
@@ -117,9 +106,15 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <ProjectReference Include="..\Común\Gama.Común.csproj">
+      <Project>{761c0f2a-39f0-4df3-8682-e375e7ccf31e}</Project>
+      <Name>Gama.Común</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Datos\Gama.Atenciones.Datos.csproj">
+      <Project>{d0014e3a-600c-46d9-a738-cc69ec573699}</Project>
+      <Name>Gama.Atenciones.Datos</Name>
+    </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
