--- a/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
+++ b/ModuloDeAtenciones/Gama.Atenciones.Biz.csproj
@@ -74,6 +74,7 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Atencion.cs" />
     <Compile Include="Util\EnumBindingSourceExtension.cs" />
     <Compile Include="Util\EnumDescriptionTypeConverter.cs" />
   </ItemGroup>
